2005-01-10  David Harrison  <harrison@apple.com>

        Reviewed by Darin.

        * kwq/KWQTextUtilities.mm:
        (currentTextBreakLocaleID):
        Return empty string (AKA root locale) if locale pref can not be canonicalized.

2005-01-10  John Sullivan  <sullivan@apple.com>

        Fixed broken Panther build.

        * kwq/KWQTextUtilities.mm:
        (currentTextBreakLocaleID):
        This recently-added function was using code copy/pasted from CarbonCore UnicodeUtilities.
        That code used a Tiger-only function, CFLocaleCreateCanonicalLanguageIdentifierFromString.
        To fix the build, I added a BUILDING_ON_PANTHER #ifdef that avoids the call to the Tiger
        function. However, the Tiger-only code was wrong; the string generated using 
        CFLocaleCreateCanonicalLanguageIdentifierFromString was not used at all, so I fixed that
        as well.

2005-01-09  David Harrison  <harrison@apple.com>

        Reviewed by Ken Kocienda.

        <rdar://problem/3786362> REGRESSION (Mail): pasted text loses one newline
        
        * khtml/editing/htmlediting.cpp:
        (khtml::ReplaceSelectionCommand::doApply):
        Tune check for need for insertParagraphSeparator when hasInterchangeNewline.

2005-01-09  Darin Adler  <darin@apple.com>

        Reviewed by Harrison.

        - fixed <rdar://problem/3939176> select() method does not work on <input type=search>

        * khtml/html/html_formimpl.cpp: (DOM::HTMLInputElementImpl::select): Changed if statement
        to a switch statement. Added SEARCH to the set of types that treat the renderer as a
        RenderLineEdit.

2005-01-09  David Harrison  <harrison@apple.com>

        Reviewed by Ken Kocienda.

        <rdar://problem/3905066> REGRESSION (Mail): Hitting return key with caret in front of space causes space to become lost (resize fixes)


        Problem was that InsertParagraphSeparatorCommand::doApply() was not collapsing