@@ -1,3 +1,14 @@
+2005-01-10  Chris Blumenberg  <cblu@apple.com>
+
+	Fixed: <rdar://problem/3936844> Mail: Messages with rich text do not print
+
+        Reviewed by john.
+
+        * khtml/rendering/render_flow.cpp:
+        (RenderFlow::paintLines): don't do pagination work if printRect is not set
+        * khtml/rendering/render_list.cpp:
+        (RenderListMarker::paint): ditto
+
 2005-01-10  David Harrison  <harrison@apple.com>
 
         Reviewed by Darin.
